records of exercises
>>> print("The Meaning Of Life")
The Meaning Of Life
>>> print()

>>> 30 + 12
42
>>> 30 - 12
18
>>> 3 * 4
12
>>> 12 / 3
4.0
>>> 1 / 3
0.3333333333333333
>>> 3 * 4 + 30
42
>>> 3 * (4+30 0
  File "<stdin>", line 1
    3 * (4+30 0
              ^
SyntaxError: invalid syntax
>>> 3 * (4 + 30)
102
-----------------------------------------

